<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2022 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="feature_settings_top_app_bar_action_icon_description">Ustawienia</string>
    <string name="feature_settings_top_app_bar_navigation_icon_description">Szukaj</string>
    <string name="feature_settings_title">Ustawienia</string>
    <string name="feature_settings_loading">Proszę czkeać…</string>
    <string name="feature_settings_privacy_policy">Polityka prywatności</string>
    <string name="feature_settings_licenses">Licencja</string>
    <string name="feature_settings_brand_guidelines">Brand Guidelines</string>
    <string name="feature_settings_feedback">Feedback</string>
    <string name="feature_settings_theme">Motyw</string>
    <string name="feature_settings_brand_default">Domyślny</string>
    <string name="feature_settings_brand_android">Android</string>
    <string name="feature_settings_dark_mode_preference">Ustawienie dark mode </string>
    <string name="feature_settings_dark_mode_config_system_default">Domyślny systemowo</string>
    <string name="feature_settings_dark_mode_config_light">Light</string>
    <string name="feature_settings_dark_mode_config_dark">Dark</string>
    <string name="feature_settings_dynamic_color_preference">Używaj dynamicznych kolorów</string>
    <string name="feature_settings_notification_preference">Powiadomienia</string>
    <string name="feature_settings_notification_channel_news">Nowinki</string>
    <string name="feature_settings_notification_channel_transfers">Transfery</string>
    <string name="feature_settings_notification_channel_general">Ogólne</string>
    <string name="feature_settings_social_media_panel">Social media</string>
    <string name="feature_settings_instagram_content_description">Instagram url icon</string>
    <string name="feature_settings_facebook_content_description">Facebook url icon</string>
    <string name="feature_settings_x_content_description">X url icon</string>
    <string name="feature_settings_www_content_description">Nowinki transferowe url icon</string>
    <string name="feature_settings_dynamic_color_yes">Tak</string>
    <string name="feature_settings_dynamic_color_no">Nie</string>
    <string name="feature_settings_dismiss_dialog_button_text">OK</string>
</resources>
