<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2021 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="feature_news_title">Nowinki</string>
    <string name="feature_news_done">Gotowane</string>
    <string name="feature_news_loading">Ładowanie nowinek…</string>
    <string name="feature_news_navigate_up">Nawiguj wyżej</string>
    <string name="feature_news_onboarding_guidance_title">Czym jesteś zainteresowany?</string>
    <string name="feature_news_onboarding_guidance_subtitle">Zmiany katogorii, które obserwujesz pojawią się tu. Zacznij obserwować aby coś się pojawiło.</string>

</resources>
