<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2024 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="core_ui_bookmark">Zakładka</string>
    <string name="core_ui_unbookmark">Usuń zakładkę</string>
    <string name="core_ui_back">Wróć</string>
    <string name="core_ui_share">Udostępnij</string>

    <string name="core_ui_unread_resource_dot_content_description">Nieprzeczytana</string>
    <string name="core_ui_card_meta_data_text">%1$s • %2$s</string>
    <string name="core_ui_topic_chip_content_description_when_followed">%1$s jest obserwowany</string>
    <string name="core_ui_topic_chip_content_description_when_not_followed">%1$s nie jest obserwowany</string>
    <string name="core_ui_topic_chip_content_description">Topic: %1$s</string>
    <string name="core_ui_card_tap_action">Otwórz szczegóły</string>
    <string name="core_ui_feed_sharing">Udostępnianie feedu</string>
    <string name="core_ui_feed_sharing_data">%1$s: %2$s</string>
</resources>